--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
-face-recognition==1.3.0
-face-recognition-models==0.3.0
-opencv-python==4.7.0.68
-opencv-python-headless==4.7.0.72
+# face-recognition==1.3.0
+# face-recognition-models==0.3.0
+# opencv-python==4.7.0.68
+# opencv-python-headless==4.7.0.72
 streamlit==1.20.0
 streamlit-webrtc==0.45.0
 cmake==3.26.0
