--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,5 @@
 streamlit==1.20.0
 streamlit-webrtc==0.45.0
 cmake==3.26.0
-opencv-python==4.7.0.68
-opencv-python-headless==4.7.0.72
 dlib==19.24.0
+opencv_contrib
